[gd_scene load_steps=8 format=2]

[ext_resource path="res://Textures/pngwing.com.png" type="Texture" id=1]
[ext_resource path="res://Robot/Jetpack/JetPack.dae" type="PackedScene" id=2]
[ext_resource path="res://Robot/Jetpack/Jetpack.gd" type="Script" id=3]
[ext_resource path="res://Textures/HealthBar.png" type="Texture" id=4]

[sub_resource type="SpatialMaterial" id=1]
flags_use_shadow_to_opacity = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 1 )

[sub_resource type="ParticlesMaterial" id=2]

[sub_resource type="QuadMesh" id=3]

[node name="Jetpack" type="Spatial"]
script = ExtResource( 3 )

[node name="JetPack" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.35, 0, 0 )

[node name="Particles" type="Particles" parent="JetPack"]
transform = Transform( -3.0598e-08, 0, -0.7, 0, 1.51, 0, 0.7, 0, -3.0598e-08, 0.723879, -1.25729, -0.116262 )
layers = 2
material_override = SubResource( 1 )
lifetime = 0.19
speed_scale = 3.78
explosiveness = 1.0
randomness = 1.0
visibility_aabb = AABB( -0.586145, -1.50392, -0.479794, 1.26116, 2.04105, 0.959588 )
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="Particles2" type="Particles" parent="JetPack"]
transform = Transform( -3.0598e-08, 0, -0.7, 0, 1.51, 0, 0.7, 0, -3.0598e-08, -0.666509, -1.25729, -0.116262 )
layers = 2
material_override = SubResource( 1 )
lifetime = 0.19
speed_scale = 3.78
explosiveness = 1.0
randomness = 1.0
visibility_aabb = AABB( -0.586145, -1.50392, -0.479794, 1.26116, 2.04105, 0.959588 )
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="JetPack2" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.35, 0, 0 )

[node name="Particles3" type="Particles" parent="JetPack2"]
transform = Transform( -3.0598e-08, 0, 0.7, 0, 1.51, 0, -0.7, 0, -3.0598e-08, -0.723879, -1.25729, -0.0982053 )
layers = 2
material_override = SubResource( 1 )
lifetime = 0.19
speed_scale = 3.78
explosiveness = 1.0
randomness = 1.0
visibility_aabb = AABB( -0.586145, -1.50392, -0.479794, 1.26116, 2.04105, 0.959588 )
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="Particles4" type="Particles" parent="JetPack2"]
transform = Transform( -3.0598e-08, 0, 0.7, 0, 1.51, 0, -0.7, 0, -3.0598e-08, 0.666509, -1.25729, -0.0982053 )
layers = 2
material_override = SubResource( 1 )
lifetime = 0.19
speed_scale = 3.78
explosiveness = 1.0
randomness = 1.0
visibility_aabb = AABB( -0.586145, -1.50392, -0.479794, 1.26116, 2.04105, 0.959588 )
process_material = SubResource( 2 )
draw_pass_1 = SubResource( 3 )

[node name="HealthBar" type="Sprite" parent="."]
position = Vector2( 974.95, 51.2604 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )
